add social widget; remove socials from footer

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -43,6 +43,8 @@ widget_archive:
   other: Archive
 widget_tags:
   other: Tags
+widget_social:
+  other: Social
 widget_categories:
   other: Categories
 widget_tagcloud:
